fix: chat window size too small in some resoulutions

--- a/src/container/chat/index.scss
+++ b/src/container/chat/index.scss
@@ -1,7 +1,7 @@
 #connectly-wrapper {
   .chat-container {
     min-width: 250px;
-    max-width: 300px;
+    max-width: 350px;
     background-color: white;
     border: 1px solid #DDD;
     border-bottom: 0;
@@ -24,6 +24,7 @@
       h4 {
         margin: 0;
         font-weight: normal;
+	font-size: calc(var(--cn-font-size-small) * 0.9);
       }
 
       img {
